<resources>

    <string name="app_name">AndroidAcademyAssignments</string>

    <!-- Titles -->
    <string name="movies_list_title">Movies list</string>
    <string name="movie_storyline">Storyline</string>
    <string name="movie_cast">Cast</string>
    <string name="back">Back</string>

    <!-- Avengers: End Game -->
    <string name="avengers_movie_name">Avengers: End Game</string>
    <string name="avengers_movie_age">13+</string>
    <string name="avengers_movie_duration">137 min</string>
    <string name="avengers_movie_genre">Action, Adventure, Fantasy</string>
    <string name="avengers_movie_review">125 Reviews</string>
    <string name="avengers_movie_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="actor_1">Robert Downey Jr.</string>
    <string name="actor_2">Chris Evans</string>
    <string name="actor_3">Mark Ruffalo</string>
    <string name="actor_4">Chris Hemsworth</string>

    <!-- Strings for movie data -->
    <string name="fragment_movie_chosen_text">No data for movie \"%1$s\"</string>
    <string name="movie_age">%1$d+</string>
    <string name="movie_review">%1$d Reviews</string>
    <string name="movie_duration">%1$d min</string>

    <string name="error_load_movie_details">Download failed</string>

</resources>