<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:foreground="@drawable/poster_gradient"
            android:maxHeight="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/back"
            style="@style/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_back"
            android:drawablePadding="@dimen/icon_margin"
            android:text="@string/back"
            android:layout_marginTop="@dimen/content_margin_top"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_movie_age"
            style="@style/movie_age"
            android:layout_marginBottom="@dimen/margin_12"
            app:layout_constraintBottom_toTopOf="@+id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_movie_name"
            style="@style/movie_name"
            android:breakStrategy="balanced"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_movie_genre"
            style="@style/movie_genre"
            app:layout_constraintTop_toBottomOf="@id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/movie_genre"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_1"
            app:layout_constraintBottom_toBottomOf="@+id/star_1"
            app:layout_constraintStart_toEndOf="@+id/star_1" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_2"
            app:layout_constraintBottom_toBottomOf="@+id/star_2"
            app:layout_constraintStart_toEndOf="@+id/star_2" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_3"
            app:layout_constraintBottom_toBottomOf="@+id/star_3"
            app:layout_constraintStart_toEndOf="@+id/star_3" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_4"
            app:layout_constraintBottom_toBottomOf="@+id/star_4"
            app:layout_constraintStart_toEndOf="@+id/star_4" />

        <TextView
            android:id="@+id/movie_review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_movie_review"
            style="@style/movie_review"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/star_5"
            app:layout_constraintBottom_toBottomOf="@+id/star_5"
            app:layout_constraintStart_toEndOf="@+id/star_5" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_storyline"
            style="@style/block_title"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintTop_toBottomOf="@id/star_1"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <TextView
            android:id="@+id/movie_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_movie_storyline"
            style="@style/movie_storyline"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/storyline"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast"
            style="@style/block_title"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintTop_toBottomOf="@id/movie_storyline"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            tools:listitem="@layout/view_holder_actor"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
