<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_details_background"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            android:src="@drawable/avengers_poster"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:fontFamily="@font/roboto_thin"
            android:textSize="12sp"
            android:textColor="@color/back"
            app:layout_constraintTop_toTopOf="@id/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/ic_back"
            app:layout_constraintStart_toEndOf="@id/ic_back" />

        <TextView
            android:id="@+id/movie_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/avengers_movie_age"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/movie_age"
            android:textColor="@color/white_text"
            app:layout_constraintBottom_toTopOf="@+id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_movie_name"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/movie_name"
            android:textColor="@color/white_text"
            android:breakStrategy="balanced"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_movie_genre"
            android:fontFamily="@font/roboto_thin"
            android:textSize="14sp"
            android:textColor="@color/movie_genre"
            app:layout_constraintTop_toBottomOf="@id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/movie_genre"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_1"
            app:layout_constraintBottom_toBottomOf="@+id/star_1"
            app:layout_constraintStart_toEndOf="@+id/star_1" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_2"
            app:layout_constraintBottom_toBottomOf="@+id/star_2"
            app:layout_constraintStart_toEndOf="@+id/star_2" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_3"
            app:layout_constraintBottom_toBottomOf="@+id/star_3"
            app:layout_constraintStart_toEndOf="@+id/star_3" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:layout_marginStart="@dimen/star_margin"
            app:layout_constraintTop_toTopOf="@+id/star_4"
            app:layout_constraintBottom_toBottomOf="@+id/star_4"
            app:layout_constraintStart_toEndOf="@+id/star_4" />

        <TextView
            android:id="@+id/movie_review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_movie_review"
            android:fontFamily="@font/roboto_bold"
            android:textSize="14sp"
            android:textColor="@color/movie_review"
            android:textAllCaps="true"
            android:layout_marginStart="9dp"
            app:layout_constraintTop_toTopOf="@+id/star_5"
            app:layout_constraintBottom_toBottomOf="@+id/star_5"
            app:layout_constraintStart_toEndOf="@+id/star_5" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_storyline"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/block_title"
            android:textColor="@color/white_text"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/star_1"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <TextView
            android:id="@+id/movie_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_movie_storyline"
            android:fontFamily="@font/roboto_thin"
            android:textSize="14sp"
            android:textColor="@color/movie_storyline"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/storyline"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_end" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/block_title"
            android:textColor="@color/white_text"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <ImageView
            android:id="@+id/actor_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/robert_downey_jr"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="6dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/cast"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintEnd_toStartOf="@+id/actor_2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_1"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/actor_name"
            android:textColor="@color/actor_name"
            android:breakStrategy="balanced"
            android:layout_marginTop="@dimen/actor_name_margin"
            app:layout_constraintStart_toStartOf="@+id/actor_1"
            app:layout_constraintTop_toBottomOf="@id/actor_1"
            app:layout_constraintEnd_toEndOf="@+id/actor_1" />

        <ImageView
            android:id="@+id/actor_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/chris_evans"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginStart="@dimen/actor_margin"
            app:layout_constraintTop_toTopOf="@+id/actor_1"
            app:layout_constraintStart_toEndOf="@+id/actor_1"
            app:layout_constraintEnd_toStartOf="@+id/actor_3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_2"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/actor_name"
            android:textColor="@color/actor_name"
            android:breakStrategy="balanced"
            android:layout_marginTop="@dimen/actor_name_margin"
            app:layout_constraintEnd_toEndOf="@+id/actor_2"
            app:layout_constraintStart_toStartOf="@+id/actor_2"
            app:layout_constraintTop_toBottomOf="@id/actor_2" />

        <ImageView
            android:id="@+id/actor_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/mark_ruffalo"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginStart="@dimen/actor_margin"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="@+id/actor_2"
            app:layout_constraintStart_toEndOf="@+id/actor_2"
            app:layout_constraintEnd_toStartOf="@+id/actor_4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_3"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/actor_name"
            android:textColor="@color/actor_name"
            android:breakStrategy="balanced"
            android:layout_marginTop="@dimen/actor_name_margin"
            app:layout_constraintEnd_toEndOf="@+id/actor_3"
            app:layout_constraintStart_toStartOf="@+id/actor_3"
            app:layout_constraintTop_toBottomOf="@id/actor_3" />

        <ImageView
            android:id="@+id/actor_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/chris_hemsworth"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginStart="@dimen/actor_margin"
            app:layout_constraintTop_toTopOf="@+id/actor_3"
            app:layout_constraintStart_toEndOf="@+id/actor_3"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actor_4"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/actor_name"
            android:textColor="@color/actor_name"
            android:breakStrategy="balanced"
            android:layout_marginTop="@dimen/actor_name_margin"
            app:layout_constraintTop_toBottomOf="@id/actor_4"
            app:layout_constraintStart_toStartOf="@+id/actor_4"
            app:layout_constraintEnd_toEndOf="@+id/actor_4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/main_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/main_margin" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_storyline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
