<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_6"
    android:layout_marginEnd="@dimen/margin_6"
    android:layout_marginBottom="@dimen/margin_12"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/poster_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/poster_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:foreground="@drawable/poster_gradient"
        tools:src="@tools:sample/avatars"
        android:background="@drawable/round_corners"
        app:layout_constraintEnd_toEndOf="@+id/poster_background"
        app:layout_constraintStart_toStartOf="@+id/poster_background"
        app:layout_constraintTop_toTopOf="@+id/poster_background" />

    <TextView
        android:id="@+id/movie_age"
        style="@style/movie_age"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/poster_content_margin"
        android:layout_marginTop="@dimen/poster_content_margin"
        android:background="@drawable/age_window_for_poster"
        android:gravity="center_vertical|center_horizontal"
        tools:text="@string/avengers_movie_age"
        app:layout_constraintStart_toStartOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/poster" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/poster_content_margin"
        android:src="@drawable/ic_empty_like"
        app:layout_constraintBottom_toBottomOf="@+id/movie_age"
        app:layout_constraintEnd_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/movie_age" />

    <TextView
        android:id="@id/movie_genre"
        style="@style/movie_genre_for_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/poster_content_margin"
        android:layout_marginBottom="@dimen/margin_4"
        tools:text="@string/avengers_movie_genre"
        app:layout_constraintBottom_toTopOf="@+id/star_1"
        app:layout_constraintStart_toStartOf="@+id/poster" />

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/star_height_for_poster"
        android:layout_marginStart="@dimen/poster_content_margin"
        android:layout_marginBottom="@dimen/poster_content_margin"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_empty_star"
        app:layout_constraintBottom_toBottomOf="@+id/poster"
        app:layout_constraintStart_toStartOf="@+id/poster" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/star_height_for_poster"
        android:src="@drawable/ic_empty_star"
        android:adjustViewBounds="true"
        android:layout_marginStart="@dimen/star_margin"
        app:layout_constraintTop_toTopOf="@+id/star_1"
        app:layout_constraintBottom_toBottomOf="@+id/star_1"
        app:layout_constraintStart_toEndOf="@+id/star_1" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/star_height_for_poster"
        android:src="@drawable/ic_empty_star"
        android:layout_marginStart="@dimen/star_margin"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="@+id/star_2"
        app:layout_constraintBottom_toBottomOf="@+id/star_2"
        app:layout_constraintStart_toEndOf="@+id/star_2" />

    <ImageView
        android:id="@+id/star_4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/star_height_for_poster"
        android:src="@drawable/ic_empty_star"
        android:layout_marginStart="@dimen/star_margin"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="@+id/star_3"
        app:layout_constraintBottom_toBottomOf="@+id/star_3"
        app:layout_constraintStart_toEndOf="@+id/star_3" />

    <ImageView
        android:id="@+id/star_5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/star_height_for_poster"
        android:src="@drawable/ic_empty_star"
        android:layout_marginStart="@dimen/star_margin"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="@+id/star_4"
        app:layout_constraintBottom_toBottomOf="@+id/star_4"
        app:layout_constraintStart_toEndOf="@+id/star_4" />

    <TextView
        android:id="@+id/movie_review_count"
        style="@style/movie_review_for_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        tools:text="@string/avengers_movie_review"
        app:layout_constraintBottom_toBottomOf="@+id/star_5"
        app:layout_constraintStart_toEndOf="@+id/star_5"
        app:layout_constraintTop_toTopOf="@+id/star_5"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/movie_name"
        style="@style/block_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/poster_content_margin"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginTop="@dimen/poster_content_margin"
        tools:text="@string/avengers_movie_name"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/movie_duration"
        app:layout_constraintEnd_toEndOf="@+id/poster_background"
        app:layout_constraintStart_toStartOf="@+id/poster_background"
        app:layout_constraintTop_toBottomOf="@+id/poster" />

    <TextView
        android:id="@+id/movie_duration"
        style="@style/movie_duration_for_poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/poster_content_margin"
        android:layout_marginBottom="@dimen/poster_content_margin"
        tools:text="@string/avengers_movie_duration"
        app:layout_constraintBottom_toBottomOf="@+id/poster_background"
        app:layout_constraintEnd_toEndOf="@+id/poster_background"
        app:layout_constraintStart_toStartOf="@+id/poster_background"
        app:layout_constraintTop_toBottomOf="@+id/movie_name" />

</androidx.constraintlayout.widget.ConstraintLayout>